# docs/swagger.yaml
@@ -103,12 +103,36 @@ definitions:
           type: integer
         type: array
     type: object
+  dto.DeleteRole:
+    properties:
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
+  dto.DeleteUser:
+    properties:
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
   dto.DetailApi:
     properties:
       id:
         type: integer
     type: object
   dto.DetailMenu:
+    properties:
+      id:
+        type: integer
+    type: object
+  dto.DetailRole:
+    properties:
+      id:
+        type: integer
+    type: object
+  dto.DetailUser:
     properties:
       id:
         type: integer
@@ -144,6 +168,34 @@ definitions:
       size:
         type: integer
     type: object
+  dto.SearchRole:
+    properties:
+      key:
+        type: string
+      name:
+        type: string
+      page:
+        type: integer
+      size:
+        type: integer
+    required:
+    - key
+    - name
+    type: object
+  dto.SearchUser:
+    properties:
+      page:
+        type: integer
+      password:
+        type: string
+      size:
+        type: integer
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   dto.UpdateApi:
     properties:
       apiGroup:
@@ -161,11 +213,25 @@ definitions:
     properties:
       id:
         type: integer
+      key:
+        type: string
       name:
         type: string
     required:
-    - id
+    - key
     - name
+    type: object
+  dto.UpdateUser:
+    properties:
+      id:
+        type: integer
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
     type: object
 info:
   contact: {}
@@ -219,7 +285,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/dto.DeleteApi'
+          $ref: '#/definitions/dto.DeleteRole'
       produces:
       - application/json
       responses:
@@ -229,9 +295,9 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 删除api
+      summary: 删除Role
       tags:
-      - Api
+      - Role
   /api/detail:
     post:
       consumes:
@@ -260,12 +326,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: 分页获取API列表
+      - description: 分页获取Role列表
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/dto.SearchApi'
+          $ref: '#/definitions/dto.SearchRole'
       produces:
       - application/json
       responses:
@@ -275,9 +341,9 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 分页获取API列表
+      summary: 分页获取Role列表
       tags:
-      - Api
+      - Role
   /api/update:
     post:
       consumes:
@@ -298,7 +364,7 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 创建基础api
+      summary: 更新api
       tags:
       - Api
   /base/captcha:
@@ -460,6 +526,22 @@ paths:
       summary: 更新菜单
       tags:
       - Menu
+  /role/all:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 获取所有的Role 不分页
+      tags:
+      - Role
   /role/bindApi:
     post:
       consumes:
@@ -529,6 +611,29 @@ paths:
       summary: 创建角色
       tags:
       - Role
+  /role/detail:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 根据id获取Role
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.DetailRole'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据id获取Role
+      tags:
+      - Role
   /role/update:
     post:
       consumes:
@@ -552,6 +657,22 @@ paths:
       summary: 更新角色
       tags:
       - Role
+  /user/all:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 获取所有的User 不分页
+      tags:
+      - User
   /user/bindRole:
     post:
       consumes:
@@ -592,6 +713,98 @@ paths:
           schema:
             type: string
       summary: 创建用户
+      tags:
+      - User
+  /user/delete:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.DeleteUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 删除User
+      tags:
+      - User
+  /user/detail:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 根据id获取User
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.DetailUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据id获取User
+      tags:
+      - User
+  /user/list:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 分页获取User列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SearchUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取User列表
+      tags:
+      - User
+  /user/update:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户名
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"创建成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 更新User
       tags:
       - User
 swagger: "2.0"
